--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <base href="%PUBLIC_URL%/">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="description" content="React Shop — магазин на React." />
+    <meta name="keywords" content="React, Shop, Demo, Portfolio" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
